SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/LaunchDarkly_Account__c.object-meta.xml
<CustomObject>
    <description>A product LaunchDarkly Account.</description>
    <label>LaunchDarkly Account</label>
    <nameField>
        <label>LaunchDarkly Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaunchDarkly Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>