SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <inlineHelpText>The date when the LaunchDarkly Account was actually provisioned.</inlineHelpText>
    <label>Account Created Date</label>
    <type>Date</type>
</CustomField>