SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Account_Platform__c.field-meta.xml
<CustomField>
    <fullName>Account_Platform__c</fullName>
    <formula>BLANKVALUE( TEXT(SFDC_Account__r.Entitled_Platform__c) ,&quot;StandardTrial&quot; )</formula>
    <label>Account Platform</label>
    <type>Text</type>
</CustomField>