SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <label>Account State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial 14 Day Trial</fullName>
            </value>
            <value>
                <fullName>Extended Trial</fullName>
            </value>
            <value>
                <fullName>Expired Trial</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>