SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/LD_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LD_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>LD Account ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>