SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LaunchDarkly Accounts</relationshipLabel>
    <relationshipName>LaunchDarkly_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>