SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Most_Recent_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Trial_Start_Date__c</fullName>
    <label>Most Recent Trial Start Date</label>
    <type>Date</type>
</CustomField>