SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LaunchDarkly Accounts</relationshipLabel>
    <relationshipName>LaunchDarkly_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>