SFDC_LD_Packages/objects-layouts/main/default/objects/LaunchDarkly_Account__c/fields/SFDC_Account__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by LDAccountEntitlementsUtil apex class on Trigger insert.</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LaunchDarkly Accounts</relationshipLabel>
    <relationshipName>LaunchDarkly_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>